GRADLE-516, GRADLE-490 Userguide changes: - Allow multiple <output> elements in a <sample> element - Changed the userguide int test to do a better job of merging all samples for a given sample directory into a single gradle invocation. - Some style tweaks for examples
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@1575 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/src/docs/userguide/style.css
+++ b/src/docs/userguide/style.css
@@ -77,7 +77,7 @@ h3 {
  * Table of Contents
  */
 
-.toc dl {
+.toc dl, .list-of-examples dl {
     margin-top: 0;
     margin-bottom: 0;
 }
@@ -85,6 +85,11 @@ h3 {
 .book .toc > dl > dt {
     margin-top: 0.6em;
 }
+
+.book .toc, .book .list-of-examples {
+    margin-top: 2em;
+}
+
 
 /*
  * Examples, Figures, Tables
@@ -120,11 +125,18 @@ pre {
     white-space: nowrap;
     /*overflow-x: hidden;*/
     margin-top: 0;
-    margin-bottom: 0.2em;
+    margin-bottom: 0.6em;
 }
 
 .example pre, .figure pre {
     margin: 0;
+    margin-bottom: 0.6em;
+}
+
+.example-contents > p {
+    display: block;
+    margin: 0;
+    margin-bottom: 0.2em;
 }
 
 .example-break, .figure-break {
@@ -200,11 +212,11 @@ pre {
 
 /* Remove top margins on headings inside notes and tips */
 .tip h1, .note h1
-.tip h2, .note  h2,
-.tip h3, .note  h3,
-.tip h4, .note  h4,
-.tip h5, .note  h5,
-.tip h6 .note  h6 
+.tip h2, .note h2,
+.tip h3, .note h3,
+.tip h4, .note h4,
+.tip h5, .note h5,
+.tip h6, .note h6
 {
    margin-top: 0;
 }
