--- a/src/docs/userguide/print.css
+++ b/src/docs/userguide/print.css
@@ -6,11 +6,14 @@
 }
 
 @page contentpage {
+    margin-bottom: 2.2cm;
     @bottom-right {
-        content: 'Page ' counter(page)
+        content: 'Page ' counter(page) ' of ' counter(pages);
         font-family: 'Lucida Grande','Lucida Sans Unicode','Lucida Sans','Geneva','Verdana',sans-serif;
+        font-size: 10pt;
         color: #777777;
-        font-size: 8pt;
+        padding-bottom: 1.2cm;
+        vertical-align: bottom;
     }
 }
 
@@ -49,7 +52,7 @@ a {
 .titlepage h2.subtitle {
     font-size: 240%;
     margin: 0;
-    color: #777777;
+    color: black;
 }
 
 .titlepage .releaseinfo {
