--- a/performanceTest/src/templates/build.xml
+++ b/performanceTest/src/templates/build.xml
@@ -15,7 +15,7 @@
         <javac srcdir="\${src.dir}" destdir="\${classes.dir}"/>
     </target>
 
-    <target name="compileTests" depends="compile">
+    <target name="compileTest" depends="compile">
         <mkdir dir="\${test.classes.dir}"/>
         <javac srcdir="\${test.src.dir}" destdir="\${test.classes.dir}">
             <classpath>
@@ -25,7 +25,7 @@
         </javac>
     </target>
 
-    <target name="test" depends="compile, compileTests">
+    <target name="test" depends="compile, compileTest">
         <mkdir dir="\${test.reports.dir}"/>
         <junit>
             <classpath>
