Some userguide changes: - Switched on syntax highlighting for samples - Added a few diagrams to the java plugin chapter, to show the task/convention wiring - Upgraded to docbook stylesheets v1.75.2
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@1828 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/src/docs/userguide/print.css
+++ b/src/docs/userguide/print.css
@@ -149,6 +149,10 @@ p {
     page-break-inside: avoid;
 }
 
+.figure img {
+    width: 100%;
+}
+
 .table .title {
     text-align: left;
     white-space: nowrap;
