- Allow partial task name to be specified on the command-line - Allow camel-case abbreviations for task name to be specified on the command-line (eg gradle exDB for explodedDistBase or compTest for compileTests) - Rearranged the build failure message that gets logged - Added ErrorHandlingIvyService, which wraps all failures from the IvyService in a contextualising exception. - Added special case build failure message for 'unknown task' type failures.
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@1837 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/src/docs/userguide/style.css
+++ b/src/docs/userguide/style.css
@@ -311,6 +311,10 @@ pre {
     font-size: 90%;
 }
 
+.literal, .userinput, .filename {
+    white-space: nowrap;
+}
+
 /*
  * Code highlighting
  */
