- Finished up the code quality chapter - Documented source set properties - Other userguide bits and pieces - Added more trace to the pdf generation

--- a/src/docs/userguide/style.css
+++ b/src/docs/userguide/style.css
@@ -157,6 +157,7 @@ pre {
 
 .table table td {
     text-align: left;
+    vertical-align: text-top;
     padding-left: 0.8em;
     padding-right: 0.8em;
     padding-top: 0.3em;
